package org.example.moonshot.models;

public class CrewMember {
    private String name;
    private String role;

    // Gettery i settery
    public String getName() { return name; }
    public void setName(String name) { this.name = name; }

    public String getRole() { return role; }
    public void setRole(String role) { this.role = role; }
}
